--- a/drac_deneme2/android/app/build.gradle
+++ b/drac_deneme2/android/app/build.gradle
@@ -1,7 +1,10 @@
 plugins {
+    id("com.android.application")
+    id("com.google.gms.google-services")
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    id("com.google.gms.google-services") version "4.4.0" apply false
 }
 
 def localProperties = new Properties()
@@ -64,4 +67,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation(platform("com.google.firebase:firebase-bom:32.7.0"))
+}
