--- a/drac-deneme2/pubspec.yaml
+++ b/drac-deneme2/pubspec.yaml
@@ -47,6 +47,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   google_nav_bar: ^5.0.6
+  hexcolor: ^3.0.1
+  google_maps_flutter: ^2.0.11
+  smooth_page_indicator: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
