--- a/drac-deneme2/pubspec.yaml
+++ b/drac-deneme2/pubspec.yaml
@@ -46,11 +46,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  google_nav_bar: ^5.0.6
   hexcolor: ^3.0.1
   google_maps_flutter: ^2.0.11
   smooth_page_indicator: ^1.1.0
   location: ^4.3.0
+  flutter_polyline_points: ^2.0.0
+  flutter_svg: ^2.0.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
